@@ -5,6 +5,7 @@
 - New alarm state - "Resolved"
 - Added drivers for Cisco ESW and Dell PowerConnect switches
 - Added MIBs for Dell PowerConnect switches
+- New event processing macros: %g and %I
 - Management console:
 	- In port view ports are colored according to physical port state
 	- Interface IP shown in connection point search results
@@ -19,6 +20,7 @@
 - NXSL:
 	- Global variables can be declared in script code
 	- New functions: GetConfigurationVariable, GetObjectParents, GetObjectChildren
+	- New attribute "guid" in classes Interface, NetObj, and Node
 - AIX Subagent:
 	- New parameters available: System.CPU.PhysicalAverage.*
 - Fixed bugs:
